# src/controllers/purchase.js
@@ -5,6 +5,7 @@
 // Purchase Controllers:
 
 const Purchase = require("../models/purchase");
+const Product = require("../models/product");
 
 module.exports = {
   list: async (req, res) => {
@@ -35,6 +36,7 @@ module.exports = {
       data,
     });
   },
+
   create: async (req, res) => {
     /* 
             #swagger.tags = ["Purchases"]
@@ -52,6 +54,13 @@ module.exports = {
     req.body.userId = req.user._id;
 
     const data = await Purchase.create(req.body);
+
+    //After purchase  increase the product quantity
+
+    await Product.updateOne(
+      { _id: data.productId },
+      { $inc: { quantity: +data.quantity } }
+    );
 
     res.status(201).send({
       error: false,
@@ -91,6 +100,15 @@ module.exports = {
             }
         */
 
+    if (req.body?.quantity) {
+      const currentPurchase = await Purchase.findOne({ _id: req.params.id });
+      const difference = req.body.quantity - currentPurchase.quantity;
+      await Product.updateOne(
+        { _id: currentPurchase.productId },
+        { $inc: { quantity: +difference } }
+      );
+    }
+
     const data = await Purchase.updateOne({ _id: req.params.id }, req.body, {
       runValidators: true,
     });
@@ -108,7 +126,13 @@ module.exports = {
             #swagger.summary = "Delete Purchase"
         */
 
+    const currentPurchase = await Purchase.findOne({ _id: req.params.id });
     const data = await Purchase.deleteOne({ _id: req.params.id });
+
+    await Product.updateOne(
+      { _id: currentPurchase.productId },
+      { $inc: { quantity: -currentPurchase.quantity } }
+    );
 
     res.status(data.deletedCount ? 204 : 404).send({
       error: !data.deletedCount,
