# src/routes/category.js
@@ -7,17 +7,22 @@ const router = require("express").Router();
 // routes/category:
 
 const category = require("../controllers/category");
+const permissions = require("../middlewares/permissions");
 
-// URL: /categorys
+// URL: /categories
 
-router.route("/").get(category.list).post(category.create);
+router
+  .route("/")
+  .get(permissions.isStaff, category.list)
+  .post(permissions.isAdmin, category.create);
 
 router
   .route("/:id")
-  .get(category.read)
-  .put(category.update)
-  .patch(category.update)
-  .delete(category.delete);
+  .get(permissions.isStaff, category.read)
+  .put(permissions.isAdmin, category.update)
+  .patch(permissions.isAdmin, category.update)
+  .delete(permissions.isAdmin, category.delete);
 
 /* ------------------------------------------------------- */
+// Exports:
 module.exports = router;
