# src/routes/purchase.js
@@ -7,17 +7,21 @@ const router = require("express").Router();
 // routes/purchase:
 
 const purchase = require("../controllers/purchase");
+const permissions = require("../middlewares/permissions");
 
 // URL: /purchases
 
-router.route("/").get(purchase.list).post(purchase.create);
+router
+  .route("/")
+  .get(permissions.isStaff, purchase.list)
+  .post(permissions.isAdmin, purchase.create);
 
 router
   .route("/:id")
-  .get(purchase.read)
-  .put(purchase.update)
-  .patch(purchase.update)
-  .delete(purchase.delete);
+  .get(permissions.isStaff, purchase.read)
+  .put(permissions.isAdmin, purchase.update)
+  .patch(permissions.isAdmin, purchase.update)
+  .delete(permissions.isAdmin, purchase.delete);
 
 /* ------------------------------------------------------- */
 module.exports = router;
